--- a/views/product.xml
+++ b/views/product.xml
@@ -9,7 +9,7 @@
       <field name="inherit_id" ref="product.product_template_only_form_view"/>
       <field name="arch" type="xml">
         <notebook position="inside" >
-          <page string="Configuración">
+          <page string="Configuración" groups="base.group_system">
             <group>
               <field  name="sumar_validacion" />
               <field  name="calcular" />
