--- a/views/camera.xml
+++ b/views/camera.xml
@@ -14,8 +14,8 @@
     </record>
 
     <!--Form View Camara-->
-      <record id="gasto_form_view" model="ir.ui.view">
-      <field name="name">configuracion_camara.form.view</field>
+      <record id="camara_form_view" model="ir.ui.view">
+      <field name="name">Camara Form View</field>
         <field name="view_type">form</field>
         <field name="model">camara</field>
         <field name="arch" type="xml">
@@ -23,7 +23,7 @@
             <header>  
 
             </header>
-            <sheet string="Configuración Impresora">
+            <sheet string="Configuración Camara">
               <group >      
                 <group>
                   <field  name="ip"  />
@@ -40,8 +40,7 @@
       </record>
 
       <!--Menu-->
-      <menuitem id="menu_camaras" name="Camaras" parent="purchase.menu_purchase_config" action="configuracion_camara_action" />
-
+      <menuitem id="menu_camera_in_config_purchase" name="Camaras" parent="purchase.menu_purchase_config" action="configuracion_camara_action" />
 
   </data>
 </odoo>
